server/kubernetes/grafana-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-dp
spec:
  replicas: 1
  template:
    metadata:
      name: grafana
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana-container
          image: luisavelino/iot-grafana:1.0
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-storage
              mountPath: /var/lib/grafana
      volumes:
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-storage-pvc

  selector:
    matchLabels:
      app: grafana
