server/kubernetes/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 30000
  selector:
    app: grafana
