server/kubernetes/mosquitto-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-svc
spec:
  type: LoadBalancer
  ports:
    - port: 1883
  selector:
    app: mosquitto
