server/kubernetes/telegraf-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: telegraf-svc
spec:
  type: ClusterIP
  ports:
    - port: 5505
  selector:
    app: telegraf
