server/kubernetes/grafana-in.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-in
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: grafana.iot-utfpr.ddns.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-svc
            port:
              number: 3000
